Add new asset and change order of houses

--- a/index.html
+++ b/index.html
@@ -168,27 +168,39 @@
 
     <section id="homeGallery" class="homes">
       <div class="home">
-        <img src="img/house-1.jpeg" alt="House 1" class="home__img" />
-        <svg class="home__like"><use xlink:href="img/sprite.svg#icon-heart-full"></use></svg>
-        <h5 class="home__name">Poseidonia 28 Kapparis</h5>
+        <img src="img/house-0.jpeg" alt="House 3" class="home__img" />
+        <svg class="home__like">
+          <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+        </svg>
+        <h5 class="home__name">10 Plot 35 Blue Water Bay</h5>
         <div class="home__location">
-          <svg class="home__like"><use xlink:href="img/sprite.svg#icon-map-pin"></use></svg>
+          <svg class="home__like">
+            <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+          </svg>
           <p>Kapparis</p>
         </div>
         <div class="home__rooms">
-          <svg><use xlink:href="img/sprite.svg#icon-profile-male"></use></svg>
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+          </svg>
           <p>3 bedrooms</p>
         </div>
         <div class="home__area">
-          <svg><use xlink:href="img/sprite.svg#icon-expand"></use></svg>
-          <p>€350 deposit</p>
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-expand"></use>
+          </svg>
+          <p>
+            €300 deposit
+          </p>
         </div>
         <div class="home__price">
-          <svg><use xlink:href="img/sprite.svg#icon-key"></use></svg>
-          <p>€950 / week</p>
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-key"></use>
+          </svg>
+          <p>from €3,500 / week</p>
         </div>
         <a
-          href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Poseidonia%20rental!"
+          href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Thirty-Five%20Blue%20Water%20Bay%20rental!"
           class="btn home__btn"
         >
           Contact us
@@ -225,7 +237,7 @@
           <svg>
             <use xlink:href="img/sprite.svg#icon-key"></use>
           </svg>
-          <p>€3,500 / week</p>
+          <p>from €9,500 / week</p>
         </div>
         <a
           href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Blue%20Wave%20rental!"
@@ -236,39 +248,27 @@
       </div>
 
       <div class="home">
-        <img src="img/house-3.jpeg" alt="House 3" class="home__img" />
-        <svg class="home__like">
-          <use xlink:href="img/sprite.svg#icon-heart-full"></use>
-        </svg>
-        <h5 class="home__name">10 Plot 35 Blue Water Bay</h5>
+        <img src="img/house-1.jpeg" alt="House 1" class="home__img" />
+        <svg class="home__like"><use xlink:href="img/sprite.svg#icon-heart-full"></use></svg>
+        <h5 class="home__name">Poseidonia 28 Kapparis</h5>
         <div class="home__location">
-          <svg class="home__like">
-            <use xlink:href="img/sprite.svg#icon-map-pin"></use>
-          </svg>
+          <svg class="home__like"><use xlink:href="img/sprite.svg#icon-map-pin"></use></svg>
           <p>Kapparis</p>
         </div>
         <div class="home__rooms">
-          <svg>
-            <use xlink:href="img/sprite.svg#icon-profile-male"></use>
-          </svg>
+          <svg><use xlink:href="img/sprite.svg#icon-profile-male"></use></svg>
           <p>3 bedrooms</p>
         </div>
         <div class="home__area">
-          <svg>
-            <use xlink:href="img/sprite.svg#icon-expand"></use>
-          </svg>
-          <p>
-            €300 deposit
-          </p>
+          <svg><use xlink:href="img/sprite.svg#icon-expand"></use></svg>
+          <p>€350 deposit</p>
         </div>
         <div class="home__price">
-          <svg>
-            <use xlink:href="img/sprite.svg#icon-key"></use>
-          </svg>
-          <p>€850 / week</p>
+          <svg><use xlink:href="img/sprite.svg#icon-key"></use></svg>
+          <p>from €950 / week</p>
         </div>
         <a
-          href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Thirty-Five%20Blue%20Water%20Bay%20rental!"
+          href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Poseidonia%20rental!"
           class="btn home__btn"
         >
           Contact us
@@ -305,7 +305,7 @@
           <svg>
             <use xlink:href="img/sprite.svg#icon-key"></use>
           </svg>
-          <p>€2,450 / week</p>
+          <p>from €2,450 / week</p>
         </div>
         <a
           href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Forty-Six%20Blue%20Water%20Bay%20rental!"
@@ -345,7 +345,7 @@
           <svg>
             <use xlink:href="img/sprite.svg#icon-key"></use>
           </svg>
-          <p>€2,505 / week</p>
+          <p>from €2,505 / week</p>
         </div>
         <a
           href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Forty-Eight%20Blue%20Water%20Bay%20rental!"
@@ -386,7 +386,7 @@
           <svg>
             <use xlink:href="img/sprite.svg#icon-key"></use>
           </svg>
-          <p>€4,000 / week</p>
+          <p>from €4,000 / week</p>
         </div>
         <a
           href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Sirena%20Bay%20rental!"
