Add img and tweak house content

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <svg class="home__like">
           <use xlink:href="img/sprite.svg#icon-heart-full"></use>
         </svg>
-        <h5 class="home__name">10 Plot 35 Blue Water Bay</h5>
+        <h5 class="home__name">Blue Water Bay</h5>
         <div class="home__location">
           <svg class="home__like">
             <use xlink:href="img/sprite.svg#icon-map-pin"></use>
@@ -241,6 +241,47 @@
         </div>
         <a
           href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Blue%20Wave%20rental!"
+          class="btn home__btn"
+        >
+          Contact us
+        </a>
+      </div>
+
+      <div class="home">
+        <img src="img/house-6.jpeg" alt="House 6" class="home__img" />
+        <svg class="home__like">
+          <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+        </svg>
+
+        <h5 class="home__name">Sirena Pride Pernera</h5>
+        <div class="home__location">
+          <svg class="home__like">
+            <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+          </svg>
+          <p>Pernera</p>
+        </div>
+        <div class="home__rooms">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+          </svg>
+          <p>5 bedrooms</p>
+        </div>
+        <div class="home__area">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-expand"></use>
+          </svg>
+          <p>
+            €2,000 deposit
+          </p>
+        </div>
+        <div class="home__price">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-key"></use>
+          </svg>
+          <p>from €7,000 / week</p>
+        </div>
+        <a
+          href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Sirena%20Bay%20rental!"
           class="btn home__btn"
         >
           Contact us
@@ -355,46 +396,6 @@
         </a>
       </div>
 
-      <div class="home">
-        <img src="img/house-6.jpeg" alt="House 6" class="home__img" />
-        <svg class="home__like">
-          <use xlink:href="img/sprite.svg#icon-heart-full"></use>
-        </svg>
-
-        <h5 class="home__name">Sirena Pride Pernera</h5>
-        <div class="home__location">
-          <svg class="home__like">
-            <use xlink:href="img/sprite.svg#icon-map-pin"></use>
-          </svg>
-          <p>Pernera</p>
-        </div>
-        <div class="home__rooms">
-          <svg>
-            <use xlink:href="img/sprite.svg#icon-profile-male"></use>
-          </svg>
-          <p>5 bedrooms</p>
-        </div>
-        <div class="home__area">
-          <svg>
-            <use xlink:href="img/sprite.svg#icon-expand"></use>
-          </svg>
-          <p>
-            €2,000 deposit
-          </p>
-        </div>
-        <div class="home__price">
-          <svg>
-            <use xlink:href="img/sprite.svg#icon-key"></use>
-          </svg>
-          <p>from €4,000 / week</p>
-        </div>
-        <a
-          href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Sirena%20Bay%20rental!"
-          class="btn home__btn"
-        >
-          Contact us
-        </a>
-      </div>
       <div class="home">
         <img src="img/house-7.jpg" alt="House 1" class="home__img" />
         <svg class="home__like"><use xlink:href="img/sprite.svg#icon-heart-full"></use></svg>
