--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <svg class="home__like">
           <use xlink:href="img/sprite.svg#icon-heart-full"></use>
         </svg>
-        <h5 class="home__name">Blue Water Bay</h5>
+        <h5 class="home__name">46 Blue Water Bay Emerald</h5>
         <div class="home__location">
           <svg class="home__like">
             <use xlink:href="img/sprite.svg#icon-map-pin"></use>
@@ -183,14 +183,14 @@
           <svg>
             <use xlink:href="img/sprite.svg#icon-profile-male"></use>
           </svg>
-          <p>3 bedrooms</p>
+          <p>4 bedrooms</p>
         </div>
         <div class="home__area">
           <svg>
             <use xlink:href="img/sprite.svg#icon-expand"></use>
           </svg>
           <p>
-            €300 deposit
+            €1000 deposit
           </p>
         </div>
         <div class="home__price">
@@ -289,46 +289,6 @@
       </div>
 
       <div class="home">
-        <img src="img/house-4.jpeg" alt="House 4" class="home__img" />
-        <svg class="home__like">
-          <use xlink:href="img/sprite.svg#icon-heart-full"></use>
-        </svg>
-        <h5 class="home__name">46 Blue Water Bay Emerald</h5>
-        <div class="home__location">
-          <svg class="home__like">
-            <use xlink:href="img/sprite.svg#icon-map-pin"></use>
-          </svg>
-          <p>Kapparis</p>
-        </div>
-        <div class="home__rooms">
-          <svg>
-            <use xlink:href="img/sprite.svg#icon-profile-male"></use>
-          </svg>
-          <p>4 bedrooms</p>
-        </div>
-        <div class="home__area">
-          <svg>
-            <use xlink:href="img/sprite.svg#icon-expand"></use>
-          </svg>
-          <p>
-            €1,000 deposit
-          </p>
-        </div>
-        <div class="home__price">
-          <svg>
-            <use xlink:href="img/sprite.svg#icon-key"></use>
-          </svg>
-          <p>from €2,450 / week</p>
-        </div>
-        <a
-          href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Forty-Six%20Blue%20Water%20Bay%20rental!"
-          class="btn home__btn"
-        >
-          Contact us
-        </a>
-      </div>
-
-      <div class="home">
         <img src="img/house-1.jpeg" alt="House 1" class="home__img" />
         <svg class="home__like"><use xlink:href="img/sprite.svg#icon-heart-full"></use></svg>
         <h5 class="home__name">Poseidonia 28 Kapparis</h5>
@@ -350,6 +310,46 @@
         </div>
         <a
           href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Poseidonia%20rental!"
+          class="btn home__btn"
+        >
+          Contact us
+        </a>
+      </div>
+
+      <div class="home">
+        <img src="img/house-10.jpeg" alt="House 3" class="home__img" />
+        <svg class="home__like">
+          <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+        </svg>
+        <h5 class="home__name">27 Blue Water Bay</h5>
+        <div class="home__location">
+          <svg class="home__like">
+            <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+          </svg>
+          <p>Kapparis</p>
+        </div>
+        <div class="home__rooms">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+          </svg>
+          <p>3 bedrooms</p>
+        </div>
+        <div class="home__area">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-expand"></use>
+          </svg>
+          <p>
+            €300 deposit
+          </p>
+        </div>
+        <div class="home__price">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-key"></use>
+          </svg>
+          <p>from €1,500 / week</p>
+        </div>
+        <a
+          href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Thirty-Five%20Blue%20Water%20Bay%20rental!"
           class="btn home__btn"
         >
           Contact us
