Change email subjects

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
           <p>from €3,500 / week</p>
         </div>
         <a
-          href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Thirty-Five%20Blue%20Water%20Bay%20rental!"
+          href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Forty-Six%20Blue%20Water%20Bay%20rental!"
           class="btn home__btn"
         >
           Contact us
@@ -281,7 +281,7 @@
           <p>from €7,000 / week</p>
         </div>
         <a
-          href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Sirena%20Bay%20rental!"
+          href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Sirena%20Pride%20rental!"
           class="btn home__btn"
         >
           Contact us
@@ -349,7 +349,7 @@
           <p>from €1,500 / week</p>
         </div>
         <a
-          href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Thirty-Five%20Blue%20Water%20Bay%20rental!"
+          href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Twenty-Seven%20Blue%20Water%20Bay%20rental!"
           class="btn home__btn"
         >
           Contact us
