--- a/index.html
+++ b/index.html
@@ -290,22 +290,32 @@
 
       <div class="home">
         <img src="img/house-1.jpeg" alt="House 1" class="home__img" />
-        <svg class="home__like"><use xlink:href="img/sprite.svg#icon-heart-full"></use></svg>
+        <svg class="home__like">
+          <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+        </svg>
         <h5 class="home__name">Poseidonia 28 Kapparis</h5>
         <div class="home__location">
-          <svg class="home__like"><use xlink:href="img/sprite.svg#icon-map-pin"></use></svg>
+          <svg class="home__like">
+            <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+          </svg>
           <p>Kapparis</p>
         </div>
         <div class="home__rooms">
-          <svg><use xlink:href="img/sprite.svg#icon-profile-male"></use></svg>
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+          </svg>
           <p>3 bedrooms</p>
         </div>
         <div class="home__area">
-          <svg><use xlink:href="img/sprite.svg#icon-expand"></use></svg>
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-expand"></use>
+          </svg>
           <p>€350 deposit</p>
         </div>
         <div class="home__price">
-          <svg><use xlink:href="img/sprite.svg#icon-key"></use></svg>
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-key"></use>
+          </svg>
           <p>from €1,500 / week</p>
         </div>
         <a
@@ -397,23 +407,153 @@
       </div>
 
       <div class="home">
+        <img src="img/house-11.jpeg" alt="House 5" class="home__img" />
+        <svg class="home__like">
+          <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+        </svg>
+        <h5 class="home__name">12C Blue Water Bay Aveon</h5>
+        <div class="home__location">
+          <svg class="home__like">
+            <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+          </svg>
+          <p>Kapparis</p>
+        </div>
+        <div class="home__rooms">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+          </svg>
+          <p>2 bedrooms</p>
+        </div>
+        <div class="home__area">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-expand"></use>
+          </svg>
+          <p>
+            €350 deposit
+          </p>
+        </div>
+        <div class="home__price">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-key"></use>
+          </svg>
+          <p>from €1,500 / week</p>
+        </div>
+        <a
+          href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Twelve-C%20Blue%20Water%20Bay%20rental!"
+          class="btn home__btn"
+        >
+          Contact us
+        </a>
+      </div>
+
+      <div class="home">
+        <img src="img/house-12.jpeg" alt="House 5" class="home__img" />
+        <svg class="home__like">
+          <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+        </svg>
+        <h5 class="home__name">Polixenia Flat w/ Private Pool</h5>
+        <div class="home__location">
+          <svg class="home__like">
+            <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+          </svg>
+          <p>Pernera</p>
+        </div>
+        <div class="home__rooms">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+          </svg>
+          <p>2 bedrooms</p>
+        </div>
+        <div class="home__area">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-expand"></use>
+          </svg>
+          <p>
+            €300 deposit
+          </p>
+        </div>
+        <div class="home__price">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-key"></use>
+          </svg>
+          <p>from €1,150 / week</p>
+        </div>
+        <a
+          href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Poixenia%20Apartment%20rental!"
+          class="btn home__btn"
+        >
+          Contact us
+        </a>
+      </div>
+
+      <div class="home">
+        <img src="img/house-13.jpeg" alt="House 5" class="home__img" />
+        <svg class="home__like">
+          <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+        </svg>
+        <h5 class="home__name">3 Blue Water Bay</h5>
+        <div class="home__location">
+          <svg class="home__like">
+            <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+          </svg>
+          <p>Kapparis</p>
+        </div>
+        <div class="home__rooms">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+          </svg>
+          <p>3 bedrooms</p>
+        </div>
+        <div class="home__area">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-expand"></use>
+          </svg>
+          <p>
+            €350 deposit
+          </p>
+        </div>
+        <div class="home__price">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-key"></use>
+          </svg>
+          <p>from €1,500 / week</p>
+        </div>
+        <a
+          href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Poixenia%20Apartment%20rental!"
+          class="btn home__btn"
+        >
+          Contact us
+        </a>
+      </div>
+
+      <div class="home">
         <img src="img/house-7.jpg" alt="House 1" class="home__img" />
-        <svg class="home__like"><use xlink:href="img/sprite.svg#icon-heart-full"></use></svg>
+        <svg class="home__like">
+          <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+        </svg>
         <h5 class="home__name">Periyiali Residence Resort</h5>
         <div class="home__location">
-          <svg class="home__like"><use xlink:href="img/sprite.svg#icon-map-pin"></use></svg>
+          <svg class="home__like">
+            <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+          </svg>
           <p>Konnos</p>
         </div>
         <div class="home__rooms">
-          <svg><use xlink:href="img/sprite.svg#icon-profile-male"></use></svg>
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+          </svg>
           <p>4+ bedrooms</p>
         </div>
         <div class="home__area">
-          <svg><use xlink:href="img/sprite.svg#icon-expand"></use></svg>
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-expand"></use>
+          </svg>
           <p>€ N/A deposit</p>
         </div>
         <div class="home__price">
-          <svg><use xlink:href="img/sprite.svg#icon-key"></use></svg>
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-key"></use>
+          </svg>
           <p>€ N/A / week</p>
         </div>
         <a
@@ -426,22 +566,32 @@
 
       <div class="home">
         <img src="img/house-8.jpg" alt="House 1" class="home__img" />
-        <svg class="home__like"><use xlink:href="img/sprite.svg#icon-heart-full"></use></svg>
+        <svg class="home__like">
+          <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+        </svg>
         <h5 class="home__name">Periyiali Residence Resort</h5>
         <div class="home__location">
-          <svg class="home__like"><use xlink:href="img/sprite.svg#icon-map-pin"></use></svg>
+          <svg class="home__like">
+            <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+          </svg>
           <p>Konnos</p>
         </div>
         <div class="home__rooms">
-          <svg><use xlink:href="img/sprite.svg#icon-profile-male"></use></svg>
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+          </svg>
           <p>4+ bedrooms</p>
         </div>
         <div class="home__area">
-          <svg><use xlink:href="img/sprite.svg#icon-expand"></use></svg>
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-expand"></use>
+          </svg>
           <p>€ N/A deposit</p>
         </div>
         <div class="home__price">
-          <svg><use xlink:href="img/sprite.svg#icon-key"></use></svg>
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-key"></use>
+          </svg>
           <p>€ N/A / week</p>
         </div>
         <a
@@ -454,22 +604,32 @@
 
       <div class="home">
         <img src="img/house-9.jpg" alt="House 1" class="home__img" />
-        <svg class="home__like"><use xlink:href="img/sprite.svg#icon-heart-full"></use></svg>
+        <svg class="home__like">
+          <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+        </svg>
         <h5 class="home__name">Periyiali Residence Resort</h5>
         <div class="home__location">
-          <svg class="home__like"><use xlink:href="img/sprite.svg#icon-map-pin"></use></svg>
+          <svg class="home__like">
+            <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+          </svg>
           <p>Konnos</p>
         </div>
         <div class="home__rooms">
-          <svg><use xlink:href="img/sprite.svg#icon-profile-male"></use></svg>
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+          </svg>
           <p>4+ bedrooms</p>
         </div>
         <div class="home__area">
-          <svg><use xlink:href="img/sprite.svg#icon-expand"></use></svg>
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-expand"></use>
+          </svg>
           <p>€ N/A deposit</p>
         </div>
         <div class="home__price">
-          <svg><use xlink:href="img/sprite.svg#icon-key"></use></svg>
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-key"></use>
+          </svg>
           <p>€ N/A / week</p>
         </div>
         <a
