Add metadata description

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:site"
-      content="Find your ideal villa in Cyprus. From rentals, management services, you name it, we have it."
+      content="Find your ideal villa in Cyprus. From rentals, house management services, you name it, we have it."
     />
     <meta name="author" content="CyprusAllYear" />
     <meta name="twitter:title" content="CyprusAllYear" />
