Add new site details

--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
           document.write(new Date().getFullYear() + " " + "|");
         </script>
         Site by
-        <a class="copyright__link" href="https://mostmojo.github.io" target="_blank">mojo.digital</a>
+        <a class="copyright__link" href="https://mojodigital.io" target="_blank">mojo.digital</a>
       </p>
     </footer>
   </body>
