--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
 
 	<!-- Metadata -->
 	<meta name="description" content="Find your ideal villa in Cyprus. From rentals, management services, you name it, we have it." />
-	<meta property="og:title" content="CyprusAllYear" />
+	<meta property="og:title" content="CyprusAllYear | Villa Rentals | Kapparis, Protaras, Cyprus" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://www.cyprusallyear.net" />
 	<meta property="og:image" content="https://res.cloudinary.com/mostmojo/image/upload/v1588343395/house-1.jpg" />
 	<meta property="og:description" content="Find your ideal summer villa in Cyprus. From rentals, management services, you name it, we have it." />
-	<meta property="og:site_name" content="CyprusAllYear" />
+	<meta property="og:site_name" content="CyprusAllYear | Villa Rentals | Kapparis, Protaras, Cyprus" />
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:site" content="Find your ideal villa in Cyprus. From rentals, house management services, you name it, we have it." />
-	<meta name="author" content="CyprusAllYear" />
-	<meta name="twitter:title" content="CyprusAllYear" />
+	<meta name="author" content="@mojodigital" />
+	<meta name="twitter:title" content="CyprusAllYear | Villa Rentals | Kapparis, Protaras, Cyprus" />
 	<meta name="twitter:description" content="Find your ideal villa in Cyprus. From rentals, management services, you name it, we have it." />
-	<meta name="twitter:creator" content="CyprusAllYear" />
+	<meta name="twitter:creator" content="CyprusAllYear | Villa Rentals | Kapparis, Protaras, Cyprus" />
 	<meta name="twitter:image:src" content="https://res.cloudinary.com/mostmojo/image/upload/v1588343395/house-1.jpg" />
 
-	<title>CyprusAllYear &copy; &mdash; your home, your freedom</title>
+	<title>CyprusAllYear | Villa & House Rentals | Kapparis, Protaras, Cyprus</title>
 </head>
 
 <body class="container">
