--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<meta property="og:title" content="CyprusAllYear | Villa Rentals | Kapparis, Protaras, Cyprus" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://www.cyprusallyear.net" />
-	<meta property="og:image" content="https://res.cloudinary.com/mostmojo/image/upload/v1594315175/Screenshot_2020-07-09_at_8.18.44_PM.png" />
+	<meta property="og:image" content="https://res.cloudinary.com/mostmojo/image/upload/c_thumb,w_598/v1594315175/CYAllYear.jpg" />
 	<meta property="og:description" content="Find your ideal summer villa in Cyprus. From rentals, management services, you name it, we have it." />
 	<meta property="og:site_name" content="CyprusAllYear | Villa Rentals | Kapparis, Protaras, Cyprus" />
 	<meta name="twitter:card" content="summary_large_image" />
@@ -36,7 +36,7 @@
 	<meta name="twitter:title" content="CyprusAllYear | Villa Rentals | Kapparis, Protaras, Cyprus" />
 	<meta name="twitter:description" content="Find your ideal villa in Cyprus. From rentals, management services, you name it, we have it." />
 	<meta name="twitter:creator" content="CyprusAllYear | Villa Rentals | Kapparis, Protaras, Cyprus" />
-	<meta name="twitter:image:src" content="https://res.cloudinary.com/mostmojo/image/upload/v1594315175/Screenshot_2020-07-09_at_8.18.44_PM.png" />
+	<meta name="twitter:image:src" content="https://res.cloudinary.com/mostmojo/image/upload/c_thumb,w_598/v1594315175/CYAllYear.jpg" />
 
 	<title>CyprusAllYear | Villa & House Rentals | Kapparis, Protaras, Cyprus</title>
 </head>
