--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 			<p class="feature__text">
 				Get in touch and we'll handle the rest. Simply call
 				<a href="tel:+35799076435">(+357) 99076435</a>
-				or email us
+				or email us at
 				<a href="mailto:info@cyprusallyear.com">info@cyprusallyear.com</a>
 			</p>
 		</div>
